--- a/index.html
+++ b/index.html
@@ -1,300 +1,260 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sparsh — Intro & BLABBER</title>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>Sparsh</title>
 
-  <style>
-    :root{
-      --bg:#05070b;
-      --text:#ffffff;
-      --muted:rgba(255,255,255,.72);
-      --card: rgba(10, 16, 26, .62);
-      --line: rgba(255,255,255,.10);
+<style>
+:root{
+  --bg:#ffffff;
+  --text:#111111;
+  --muted:#555;
+  --line:#e8e8e8;
+  --card:#fafafa;
+  --max: 900px;
+  --sans: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
+}
 
-      /* Jarvis-ish accents (subtle) */
-      --a1:#00e5ff;
-      --a2:#18ffb3;
-      --a3:#7c4dff;
-      --glow: 0 0 22px rgba(0,229,255,.25), 0 0 60px rgba(24,255,179,.10);
+*{box-sizing:border-box;}
+html{scroll-behavior:smooth;}
+body{
+  margin:0;
+  font-family:var(--sans);
+  background:var(--bg);
+  color:var(--text);
+  line-height:1.8;
+}
 
-      --radius: 18px;
-      --shadow: 0 18px 60px rgba(0,0,0,.55);
-      --sans: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-    }
+/* NAV */
+header{
+  position:sticky;
+  top:0;
+  background:#fff;
+  border-bottom:1px solid var(--line);
+  z-index:50;
+}
+.nav{
+  max-width:var(--max);
+  margin:auto;
+  padding:14px;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+.brand{
+  font-weight:900;
+  text-decoration:none;
+  color:#111;
+}
+.menu a{
+  margin-left:16px;
+  text-decoration:none;
+  color:#555;
+  font-weight:700;
+}
+.menu a:hover{color:#111}
 
-    *{ box-sizing:border-box; }
-    html{ scroll-behavior:smooth; }
-    body{
-      margin:0;
-      font-family: var(--sans);
-      color: var(--text);
-      background: var(--bg);
-      overflow-x:hidden;
-    }
+/* LAYOUT */
+main{max-width:var(--max); margin:auto; padding:40px 14px;}
+.hero{
+  display:grid;
+  grid-template-columns: 160px 1fr;
+  gap:24px;
+  align-items:center;
+}
+@media(max-width:700px){
+  .hero{grid-template-columns:1fr;}
+}
+.photo{
+  width:160px;
+  height:160px;
+  border-radius:12px;
+  object-fit:cover;
+  border:1px solid var(--line);
+}
+h1{margin:0;font-size:36px;}
+.lead{color:var(--muted);margin-top:6px;}
 
-    /* ===== Space background ===== */
-    .bg{
-      position:fixed;
-      inset:0;
-      z-index:-3;
-      background:
-        radial-gradient(1200px 700px at 15% 18%, rgba(0,229,255,.10), transparent 55%),
-        radial-gradient(900px 600px at 80% 25%, rgba(124,77,255,.10), transparent 60%),
-        radial-gradient(900px 700px at 50% 110%, rgba(24,255,179,.08), transparent 55%),
-        linear-gradient(180deg, #03040a 0%, #05070b 40%, #04050a 100%);
-    }
-    .stars, .stars2{
-      position:fixed;
-      inset:-200px;
-      z-index:-2;
-      background-repeat: repeat;
-      pointer-events:none;
-      animation: drift 90s linear infinite;
-    }
-    .stars{
-      opacity:.85;
-      background-size: 520px 520px;
-      background-image:
-        radial-gradient(1px 1px at 20px 30px, rgba(255,255,255,.9), transparent 40%),
-        radial-gradient(1px 1px at 140px 180px, rgba(255,255,255,.75), transparent 40%),
-        radial-gradient(1px 1px at 320px 90px, rgba(255,255,255,.8), transparent 40%),
-        radial-gradient(1px 1px at 420px 410px, rgba(255,255,255,.7), transparent 40%),
-        radial-gradient(1px 1px at 260px 360px, rgba(255,255,255,.65), transparent 40%),
-        radial-gradient(1px 1px at 480px 250px, rgba(255,255,255,.85), transparent 40%);
-    }
-    .stars2{
-      opacity:.45;
-      background-size: 760px 760px;
-      animation-duration: 140s;
-      background-image:
-        radial-gradient(1px 1px at 90px 120px, rgba(255,255,255,.6), transparent 40%),
-        radial-gradient(1px 1px at 300px 500px, rgba(255,255,255,.5), transparent 40%),
-        radial-gradient(1px 1px at 610px 240px, rgba(255,255,255,.55), transparent 40%),
-        radial-gradient(1px 1px at 540px 620px, rgba(255,255,255,.45), transparent 40%);
-      filter: blur(.2px);
-    }
-    @keyframes drift{
-      from{ transform: translate3d(0,0,0); }
-      to  { transform: translate3d(-140px, 240px, 0); }
-    }
+.section{margin-top:50px;}
+.section h2{margin-bottom:16px;font-size:22px;}
+.card{
+  background:var(--card);
+  border:1px solid var(--line);
+  border-radius:12px;
+  padding:20px;
+}
 
-    .wrap{
-      width:min(920px, 92vw);
-      margin: 0 auto;
-      padding: 26px 0 70px;
-    }
+.btn{
+  display:inline-block;
+  margin-top:10px;
+  padding:10px 16px;
+  background:#111;
+  color:#fff;
+  text-decoration:none;
+  border-radius:8px;
+  font-weight:700;
+}
 
-    .card{
-      margin-top: 18px;
-      padding: 18px;
-      border-radius: var(--radius);
-      background: var(--card);
-      border: 1px solid var(--line);
-      box-shadow: var(--shadow);
-      backdrop-filter: blur(10px);
-    }
-
-    .accentLine{
-      height: 2px;
-      width: 100%;
-      margin: 14px 0 0;
-      background: linear-gradient(90deg, var(--a1), var(--a2), var(--a3));
-      border-radius: 999px;
-      opacity: .9;
-      box-shadow: var(--glow);
-    }
-
-    h1, h2{
-      margin: 0 0 10px;
-      letter-spacing: .2px;
-    }
-    h1{ font-size: clamp(26px, 4vw, 38px); }
-    h2{ font-size: 18px; }
-
-    .text{
-      line-height: 1.9;
-      color: rgba(255,255,255,.92);
-      font-size: 15px;
-    }
-    .text p{ margin: 0 0 14px; }
-    .text strong{ color:#fff; }
-
-    .link{
-      display:inline-block;
-      margin-top: 6px;
-      padding: 10px 14px;
-      border-radius: 999px;
-      border: 1px solid rgba(0,229,255,.25);
-      background: rgba(0,229,255,.08);
-      color:#fff;
-      text-decoration:none;
-      font-weight:800;
-      box-shadow: 0 0 0 3px rgba(0,229,255,.06);
-    }
-    .link:hover{
-      border-color: rgba(24,255,179,.30);
-      background: rgba(24,255,179,.10);
-      box-shadow: var(--glow);
-    }
-
-    .sep{
-      height:1px;
-      background: var(--line);
-      margin: 14px 0;
-    }
-
-    footer{
-      margin-top: 22px;
-      text-align:center;
-      color: rgba(255,255,255,.55);
-      font-size: 12px;
-    }
-  </style>
+footer{
+  margin-top:60px;
+  border-top:1px solid var(--line);
+  padding:20px 0;
+  text-align:center;
+  color:#777;
+  font-size:14px;
+}
+</style>
 </head>
 
 <body>
-  <div class="bg"></div>
-  <div class="stars"></div>
-  <div class="stars2"></div>
 
-  <main class="wrap">
+<header>
+  <div class="nav">
+    <a class="brand" href="#">Sparsh</a>
+    <div class="menu">
+      <a href="#intro">Intro</a>
+      <a href="#chapter1">Blabber</a>
+    </div>
+  </div>
+</header>
 
-    <!-- INTRO -->
-    <section class="card" id="intro">
-      <h1>Intro</h1>
-      <div class="text">
-        <p>Hello there.<strong>I'm Sparsh.</strong></p>
+<main>
 
-        <p>I’ve always had this strong urge to tell stories — even though, honestly, my writing skills are… well, not great. But I’m trying. And that’s what matters.</p>
+<!-- HERO -->
+<div class="hero">
+  <img src="me.png" class="photo" alt="Sparsh">
+  <div>
+    <h1>Hello there!</h1>
+    <p class="lead">A personal space for stories, thoughts and blabbering.</p>
+  </div>
+</div>
 
-        <p>If you’re reading this, it means you clicked a random link on the internet and somehow landed here — on a website that’s actually live and visible to anyone in the world. Kinda wild, right?</p>
+<!-- INTRO -->
+<div class="section" id="intro">
+  <h2>Intro</h2>
+  <div class="card">
+    <p>Hello there. <strong>I'm Sparsh.</strong></p>
+    <p>I’ve always had this strong urge to tell stories — even though, honestly, my writing skills are… well, not great. But I’m trying. And that’s what matters.</p>
+    <p>If you’re reading this, it means you clicked a random link on the internet and somehow landed here — on a website that’s actually live and visible to anyone in the world. Kinda wild, right?</p>
+    <p>I come from a commerce background, and I put this whole thing together overnight. No rocket science, just curiosity and a little courage. Still, I’m proud I tried.</p>
+    <p>So yeah… I’ll be writing things here. Some might be messy. Some might be honest. Some might even be good. I just hope someone out there enjoys them.</p>
+    <p><strong>Let’s go.</strong></p>
 
-        <p>I come from a commerce background, and I put this whole thing together overnight. No rocket science, just curiosity and a little courage. Still, I’m proud I tried.</p>
+    <a class="btn" href="#chapter1">BLABBER →</a>
+  </div>
+</div>
 
-        <p>So yeah… I’ll be writing things here. Some might be messy. Some might be honest. Some might even be good. I just hope someone out there enjoys them.</p>
+<!-- CHAPTER 1 -->
+<div class="section" id="chapter1">
+  <h2>BLABBER SHOW — Chapter 1</h2>
+  <div class="card">
 
-        <p><strong>Let’s go.</strong></p>
+<p><strong>TALKIE SHOW</strong><br>
+Where I blabber… and I splatter 😆 And honestly — samne wala kya soche, it doesn’t matter 😆😆  
+Because here, I only blabber what I’ve actually experienced…</p>
 
-        <!-- hyperlink to your story on SAME page -->
-        <a class="link" href="#chapter1">BLABBER →</a>
-      </div>
+<p><strong>EPISODE ONE — VALUE</strong><br>
+Value… bole toh mulya. Par ye hota kya hai? 🤔 And honestly… how deep is this thing called value?  
+Aaj hum gota lagayenge uss samundar mein jiska naam hai VALUE.  
+To chalo, shuruwaat se shuru karte hain… kuch apni baat, kuch aapki Baat karte hai..</p>
 
-      <div class="accentLine"></div>
-    </section>
+<p><strong>Jab aap chhote the…</strong><br>
+Aapki value hoti thi.  
+Why?  
+Because aap chhote the.</p>
 
-    <!-- CHAPTER 1 -->
-    <section class="card" id="chapter1">
-      <h2>BLABBER SHOW — Chapter 1</h2>
-      <div class="sep"></div>
+<p>
+Chubby cheeks, chikna sa face 😆 jisko dekh ke koi resist hi nahi kar paata. I mean 😏 how can you?  
+Aapki bholi si surat pe log pighal jaate. Agar aap lollipop hote, log aapko nigal jaate 😆
+</p>
 
-      <div class="text">
-        <p><strong>TALKIE SHOW</strong><br>
-        Where I blabber… and I splatter 😆 And honestly — samne wala kya soche, it doesn’t matter 😆😆<br>
-        Because here, I only blabber what I’ve actually experienced…</p>
+<p>Wah wah toh bolo 😂</p>
 
-        <p><strong>EPISODE ONE — VALUE</strong><br>
-        Value… bole toh mulya. Par ye hota kya hai? 🤔 And honestly… how deep is this thing called value?<br>
-        Aaj hum gota lagayenge uss samundar mein jiska naam hai VALUE.<br>
-        To chalo, shuruwaat se shuru karte hain… kuch apni baat, kuch aapki Baat karte hai..</p>
+<p>
+Thoda seriously serious hote hain…  
+Aap the chikne. Damn sexy baby looks. And because of that… you had value.  
+Because you were the only fresh maal in the room 😆 and people love fresh maal.
+</p>
 
-        <p><strong>Jab aap chhote the…</strong><br>
-        Aapki value hoti thi.<br>
-        Why?<br>
-        Because aap chhote the.</p>
+<p>
+Aur agar aap meri tarah ladke ho — ohh ho ho… aunty, ladki, sab jhappi aur puppy dete the 😆 Life = jingalala.
+</p>
 
-        <p>
-          Chubby cheeks, chikna sa face 😆 jisko dekh ke koi resist hi nahi kar paata. I mean 😏 how can you?<br>
-          Aapki bholi si surat pe log pighal jaate. Agar aap lollipop hote, log aapko nigal jaate 😆
-        </p>
+<p><strong>Phir jaise-jaise aap bade hue…</strong><br>
+School aaya.</p>
 
-        <p>Wah wah toh bolo 😂</p>
+<p>
+Agar aap drawing, painting ya sports mein ache the, toh uss field mein aapki izzat hoti thi.  
+Log bolte: “Arey ye toh fadu drawing banata hai.” “Arey ye toh chess ka master hai.” “Arey ye scholar hai.” “Arey ye sports mein bahut acha hai.”  
+You get the idea.
+</p>
 
-        <p>
-          Thoda seriously serious hote hain…<br>
-          Aap the chikne. Damn sexy baby looks. And because of that… you had value.<br>
-          Because you were the only fresh maal in the room 😆 and people love fresh maal.
-        </p>
+<p>
+But…  
+Agar aap chomu hote? Koi value nahi karta 😆 We’ve all faced that.
+</p>
 
-        <p>
-          Aur agar aap meri tarah ladke ho — ohh ho ho… aunty, ladki, sab jhappi aur puppy dete the 😆 Life = jingalala.
-        </p>
+<p>
+So in short — aapki value hai toh aap kuch ho 😱 is duniya mein… survival wise.  
+Value nahi? Toh mom–dad ke alawa koi aapko puchhne bhi nahi aata. Exceptions hoti hain… but parents hamesha saath rehte hain — jab tak rehte hain.
+</p>
 
-        <p><strong>Phir jaise-jaise aap bade hue…</strong><br>
-          School aaya.
-        </p>
+<p><strong>Now my story</strong><br>
+When I started my career as an accountant, I had no value.  
+That room? I was nobody.</p>
 
-        <p>
-          Agar aap drawing, painting ya sports mein ache the, toh uss field mein aapki izzat hoti thi.<br>
-          Log bolte: “Arey ye toh fadu drawing banata hai.” “Arey ye toh chess ka master hai.” “Arey ye scholar hai.” “Arey ye sports mein bahut acha hai.”<br>
-          You get the idea.
-        </p>
+<p>
+Bas ek newbie — chair pe baitha, printouts nikalta, idhar-udhar files laata.  
+That’s it.
+</p>
 
-        <p>
-          But…<br>
-          Agar aap chomu hote? Koi value nahi karta 😆 We’ve all faced that.
-        </p>
+<p>
+Kabhi kabhi ek silly mistake pe bhi seniors aur bosses chillate the. Why? Because I had no value.
+</p>
 
-        <p>
-          So in short — aapki value hai toh aap kuch ho 😱 is duniya mein… survival wise.<br>
-          Value nahi? Toh mom–dad ke alawa koi aapko puchhne bhi nahi aata. Exceptions hoti hain… but parents hamesha saath rehte hain — jab tak rehte hain.
-        </p>
+<p>
+Ek baar maine client ka nil GST return file kar diya sirf isliye kyunki senior ne bola. Mujhe ghanta pata tha nil return hota kya hai 😆 Baad mein pata chala us period mein transactions thi.  
+Par phir bhi gaali mujhe hi padi. Because again… no value.
+</p>
 
-        <p><strong>Now my story</strong><br>
-          When I started my career as an accountant, I had no value.<br>
-          That room? I was nobody.
-        </p>
+<p><strong>I used to tell myself:</strong><br>
+“It’s okay. I’m learning. I’m working on something. I’ll get it. I can do it 🙂”
+</p>
 
-        <p>
-          Bas ek newbie — chair pe baitha, printouts nikalta, idhar-udhar files laata.<br>
-          That’s it.
-        </p>
+<p>
+I kept grinding. Trying to make sense of that place. Trying to become useful. Trying to become someone with value.  
+Aaj itni daant nahi padti. Still learning. Still pushing. Still giving my best every single day to earn that value.
+</p>
 
-        <p>
-          Kabhi kabhi ek silly mistake pe bhi seniors aur bosses chillate the. Why? Because I had no value.
-        </p>
+<p>
+As Virat Kohli said: If you give 110% every day of your life, you are answerable to no one.
+</p>
 
-        <p>
-          Ek baar maine client ka nil GST return file kar diya sirf isliye kyunki senior ne bola.
-          Mujhe ghanta pata tha nil return hota kya hai 😆 Baad mein pata chala us period mein transactions thi.<br>
-          Par phir bhi gaali mujhe hi padi. Because again… no value.
-        </p>
+<p><strong>So basicallyyyyy…</strong><br>
+If you start working on yourself — congratulations 🥰 koi aapko valuable banne se nahi rok sakta.  
+Bas ek shart hai — mehnat karni padegi.
+</p>
 
-        <p><strong>I used to tell myself:</strong><br>
-          “It’s okay. I’m learning. I’m working on something. I’ll get it. I can do it 🙂”
-        </p>
+<p>
+Aur haan… sunne waalon ke liye main ye faltu talk show likhta rahunga 😂 because I like blabbering 🤣
+</p>
 
-        <p>
-          I kept grinding. Trying to make sense of that place. Trying to become useful. Trying to become someone with value.<br>
-          Aaj itni daant nahi padti. Still learning. Still pushing. Still giving my best every single day to earn that value.
-        </p>
+<p>
+I’ll see you again with another topic. Till then… hum hi rahenge pyaar ke. Phir milenge chalte chalte 😆
+</p>
 
-        <p>
-          As Virat Kohli said: If you give 110% every day of your life, you are answerable to no one.
-        </p>
+<p>
+<strong>Arjun ❤️</strong> “Mujhe sirf bird ki aankh dikh rahi hai.” 😤
+</p>
 
-        <p><strong>So basicallyyyyy…</strong><br>
-          If you start working on yourself — congratulations 🥰 koi aapko valuable banne se nahi rok sakta.<br>
-          Bas ek shart hai — mehnat karni padegi.
-        </p>
+  </div>
+</div>
 
-        <p>
-          Aur haan… sunne waalon ke liye main ye faltu talk show likhta rahunga 😂 because I like blabbering 🤣
-        </p>
+<footer>
+© Sparsh
+</footer>
 
-        <p>
-          I’ll see you again with another topic. Till then… hum hi rahenge pyaar ke. Phir milenge chalte chalte 😆
-        </p>
-
-        <p>
-          And end mein, I’ll quote something which inspires me a lot:<br>
-          <strong>Arjun ❤️</strong> “Mujhe sirf bird ki aankh dikh rahi hai.” 😤
-        </p>
-      </div>
-    </section>
-
-    <footer>✨</footer>
-  </main>
+</main>
 </body>
 </html>
