--- a/index.html
+++ b/index.html
@@ -1,196 +1,133 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Sparsh</title>
-  <style>
-    :root{
-      --text:#fff;
-      --muted:rgba(255,255,255,.85);
-      --glass:rgba(0,0,0,.45);
-      --glass2:rgba(0,0,0,.65);
-      --line:rgba(255,255,255,.18);
-      --radius:18px;
-      --sans: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif;
-    }
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0;
-      font-family:var(--sans);
-      color:var(--text);
-      overflow-x:hidden;
-    }
+<meta charset="UTF-8">
+<title>Sparsh</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    /* Full background image */
-    .bg{
-      position:fixed;
-      inset:0;
-      background:
-        linear-gradient(180deg, rgba(0,0,0,.55), rgba(0,0,0,.45)),
-        url("me.png");
-      background-size:cover;
-      background-position:center;
-      z-index:-2;
-    }
-    /* subtle grain vibe */
-    .grain{
-      position:fixed; inset:0; z-index:-1;
-      background-image:
-        radial-gradient(1px 1px at 20px 30px, rgba(255,255,255,.06), transparent 40%),
-        radial-gradient(1px 1px at 140px 180px, rgba(255,255,255,.05), transparent 40%),
-        radial-gradient(1px 1px at 320px 90px, rgba(255,255,255,.04), transparent 40%);
-      opacity:.35;
-      pointer-events:none;
-    }
+<style>
+*{
+    margin:0;
+    padding:0;
+    box-sizing:border-box;
+    font-family: Arial, sans-serif;
+}
 
-    /* Top bar */
-    header{
-      position:fixed;
-      top:0; left:0; right:0;
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      padding:16px 18px;
-      z-index:50;
-    }
-    .brand{
-      font-weight:900;
-      letter-spacing:.4px;
-      font-size:18px;
-      text-shadow:0 10px 30px rgba(0,0,0,.55);
-    }
-    .menuBtn{
-      width:44px; height:44px;
-      border-radius:12px;
-      border:1px solid var(--line);
-      background:rgba(0,0,0,.35);
-      backdrop-filter: blur(8px);
-      color:#fff;
-      font-size:20px;
-      font-weight:900;
-      cursor:pointer;
-    }
+body{
+    height:100vh;
+    background:black;
+    overflow:hidden;
+}
 
-    /* Center content */
-    .wrap{
-      min-height:100vh;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      padding:90px 16px 40px;
-    }
-    .card{
-      width:min(820px, 94vw);
-      background:var(--glass);
-      border:1px solid var(--line);
-      border-radius:var(--radius);
-      padding:22px 18px;
-      backdrop-filter: blur(10px);
-      box-shadow:0 22px 70px rgba(0,0,0,.55);
-    }
-    h1{
-      margin:0 0 10px;
-      font-size: clamp(28px, 5vw, 46px);
-      letter-spacing:.2px;
-    }
-    .intro p{
-      margin:0 0 12px;
-      color:var(--muted);
-      font-size:15px;
-      line-height:1.85;
-    }
-    .intro strong{color:#fff}
-    .hint{
-      margin-top:12px;
-      font-size:13px;
-      color:rgba(255,255,255,.75);
-    }
+/* Background image */
+.bg{
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:url("me.png") no-repeat center center;
+    background-size:contain;
+    background-color:black;
+}
 
-    /* Menu overlay */
-    .overlay{
-      position:fixed;
-      inset:0;
-      background:rgba(0,0,0,.55);
-      display:none;
-      z-index:60;
-    }
-    .overlay.show{display:block;}
-    .panel{
-      position:absolute;
-      top:68px;
-      right:16px;
-      width:min(280px, 86vw);
-      background:var(--glass2);
-      border:1px solid var(--line);
-      border-radius:16px;
-      padding:10px;
-      backdrop-filter: blur(12px);
-      box-shadow:0 18px 50px rgba(0,0,0,.6);
-    }
-    .panel a{
-      display:block;
-      padding:12px 12px;
-      border-radius:12px;
-      text-decoration:none;
-      color:#fff;
-      font-weight:800;
-    }
-    .panel a:hover{
-      background:rgba(255,255,255,.08);
-    }
-    .panel small{
-      display:block;
-      padding:4px 12px 10px;
-      color:rgba(255,255,255,.7);
-    }
-  </style>
+/* Dark overlay for readability */
+.overlay{
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+    background:rgba(0,0,0,0.5);
+}
+
+/* Center button */
+.center-btn{
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform:translate(-50%, -50%);
+    padding:18px 35px;
+    border:2px solid white;
+    color:white;
+    font-size:28px;
+    background:transparent;
+    border-radius:40px;
+    cursor:pointer;
+    z-index:10;
+    transition:0.3s;
+}
+
+.center-btn:hover{
+    background:white;
+    color:black;
+}
+
+/* Intro panel */
+.intro{
+    position:fixed;
+    bottom:0;
+    left:0;
+    width:100%;
+    max-height:80%;
+    background:rgba(0,0,0,0.85);
+    color:white;
+    padding:25px;
+    overflow-y:auto;
+    transform:translateY(100%);
+    transition:0.6s ease;
+    border-top-left-radius:25px;
+    border-top-right-radius:25px;
+}
+
+.intro.show{
+    transform:translateY(0);
+}
+
+h1{
+    margin-bottom:15px;
+}
+
+p{
+    line-height:1.6;
+    margin-bottom:12px;
+}
+
+a{
+    color:white;
+    text-decoration:underline;
+}
+</style>
 </head>
+
 <body>
-  <div class="bg"></div>
-  <div class="grain"></div>
 
-  <header>
-    <div class="brand">Sparsh</div>
-    <button class="menuBtn" id="menuBtn" aria-label="Menu">☰</button>
-  </header>
+<div class="bg"></div>
+<div class="overlay"></div>
 
-  <div class="wrap">
-    <div class="card">
-      <h1>Hello there!</h1>
+<button class="center-btn" onclick="openIntro()">Hello there</button>
 
-      <div class="intro">
-        <p>Hello there.<strong>I'm Sparsh.</strong></p>
-        <p>I’ve always had this strong urge to tell stories — even though, honestly, my writing skills are… well, not great. But I’m trying. And that’s what matters.</p>
-        <p>If you’re reading this, it means you clicked a random link on the internet and somehow landed here — on a website that’s actually live and visible to anyone in the world. Kinda wild, right?</p>
-        <p>I come from a commerce background, and I put this whole thing together overnight. No rocket science, just curiosity and a little courage. Still, I’m proud I tried.</p>
-        <p>So yeah… I’ll be writing things here. Some might be messy. Some might be honest. Some might even be good. I just hope someone out there enjoys them.</p>
-        <p><strong>Let’s go.</strong></p>
-      </div>
+<div class="intro" id="intro">
+    <h1>Hello there. <b>I'm Sparsh.</b></h1>
 
-      <div class="hint">Tip: Tap ☰ → My Stories</div>
-    </div>
-  </div>
+    <p>I’ve always had this strong urge to tell stories — even though, honestly, my writing skills are… well, not great. But I’m trying. And that’s what matters.</p>
 
-  <!-- Overlay menu -->
-  <div class="overlay" id="overlay">
-    <div class="panel">
-      <small>Menu</small>
-      <a href="index.html">Home</a>
-      <a href="stories.html">My Stories</a>
-    </div>
-  </div>
+    <p>If you’re reading this, it means you clicked a random link on the internet and somehow landed here — on a website that’s actually live and visible to anyone in the world. Kinda wild, right?</p>
 
-  <script>
-    const menuBtn = document.getElementById("menuBtn");
-    const overlay = document.getElementById("overlay");
+    <p>I come from a commerce background, and I put this whole thing together overnight. No rocket science, just curiosity and a little courage. Still, I’m proud I tried.</p>
 
-    menuBtn.addEventListener("click", () => overlay.classList.toggle("show"));
-    overlay.addEventListener("click", (e) => {
-      // close when clicking outside the panel
-      if (e.target === overlay) overlay.classList.remove("show");
-    });
-  </script>
+    <p>So yeah… I’ll be writing things here. Some might be messy. Some might be honest. Some might even be good. I just hope someone out there enjoys them.</p>
+
+    <p><b>Let’s go.</b></p>
+
+    <p><a href="stories.html">Go to my stories →</a></p>
+</div>
+
+<script>
+function openIntro(){
+    document.getElementById("intro").classList.add("show");
+}
+</script>
+
 </body>
 </html>
