--- a/index.html
+++ b/index.html
@@ -175,13 +175,17 @@
     <div class="content">
       <h1>Hello there. <b>I'm Sparsh.</b></h1>
 
-      <p>I’ve always had this strong urge to tell stories — even though, honestly, my writing skills are… well, not great. But I’m trying. And that’s what matters.</p>
+      <p>I’ve always had this itch to tell stories — even if my writing sometimes looks like it was typed at 2 AM with one eye closed. But I’m trying. And honestly… that’s the whole point.</p>
 
-      <p>If you’re reading this, it means you clicked a random link on the internet and somehow landed here — on a website that’s actually live and visible to anyone in the world. Kinda wild, right?</p>
+      <p>If you’re reading this, you clicked some random link on the internet and accidentally landed here — on a website that’s actually live and visible to literally anyone in the world. Kinda wild, right?</p>
 
-      <p>I come from a commerce background, and I put this whole thing together overnight. No rocket science, just curiosity and a little courage. Still, I’m proud I tried.</p>
+      <p>Here’s the funny part: I still remember my IT teacher explaining HTML. Back then I didn’t find it cool. I barely remembered what tags do, how a paragraph works, or how a website is even built.</p>
 
-      <p>So yeah… I’ll be writing things here. Some might be messy. Some might be honest. Some might even be good. I just hope someone out there enjoys them.</p>
+      <p>Fast forward to today — I realised something: <b>GPT knows HTML, I know the idea</b>… and together we can actually build stuff. I guided it, watched one YouTube video on how to make a site live, and boom — you’re here, reading a website I pulled together overnight.</p>
+
+      <p>I come from a commerce background, so this wasn’t “my thing”… until it suddenly became my thing. No rocket science — just curiosity, a little chaos, and the courage to hit publish. And yeah… I’m proud I tried.</p>
+
+      <p>So I’ll be writing things here. Some will be messy. Some will be honest. Some might even be good. I just hope someone out there enjoys the ride.</p>
 
       <p><b>Let’s go.</b></p>
 
